directly reference datasets from github

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -19,8 +19,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-18T21:34:33.725863Z",
-     "start_time": "2025-09-18T21:34:33.721684Z"
+     "end_time": "2025-09-19T10:16:18.999165Z",
+     "start_time": "2025-09-19T10:16:18.927749Z"
     }
    },
    "source": [
@@ -32,29 +32,29 @@
     "%matplotlib inline"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 13
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-18T21:34:33.752075Z",
-     "start_time": "2025-09-18T21:34:33.744132Z"
+     "end_time": "2025-09-19T10:16:19.046460Z",
+     "start_time": "2025-09-19T10:16:19.002230Z"
     }
    },
    "source": [
     "# Importing data\n",
-    "df = pd.read_csv('../data/EngineeredRetail.csv', delimiter = \",\") "
+    "df = pd.read_csv('https://raw.githubusercontent.com/kay102dev/product-hierachical-clustering/refs/heads/main/data/EngineeredRetail.csv', delimiter = \",\")"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 14
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-18T21:34:33.767719Z",
-     "start_time": "2025-09-18T21:34:33.762799Z"
+     "end_time": "2025-09-19T10:16:19.054660Z",
+     "start_time": "2025-09-19T10:16:19.048093Z"
     }
    },
    "source": [
@@ -68,19 +68,19 @@
        "(3619, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 15
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-18T21:34:33.780005Z",
-     "start_time": "2025-09-18T21:34:33.769741Z"
+     "end_time": "2025-09-19T10:16:19.072397Z",
+     "start_time": "2025-09-19T10:16:19.057901Z"
     }
    },
    "source": [
@@ -92,11 +92,11 @@
      "data": {
       "text/plain": [
        "        Amount  Frequency   Recency\n",
-       "1917 -0.297537  -0.386057 -0.516500\n",
-       "2422 -0.550137  -0.722510 -0.154666\n",
-       "2449  1.639266   1.852083 -0.527807\n",
-       "1572  0.230995   1.149922 -0.527807\n",
-       "1953 -0.495162  -0.590854 -0.426042"
+       "2944 -0.541620  -0.649368  2.106800\n",
+       "0    -0.353811  -0.386057  2.118107\n",
+       "2141  3.246075   2.729785 -0.527807\n",
+       "1938  1.310369  -0.473827  0.388086\n",
+       "1150 -0.146195  -0.269030 -0.527807"
       ],
       "text/html": [
        "<div>\n",
@@ -124,53 +124,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1917</th>\n",
-       "      <td>-0.297537</td>\n",
+       "      <th>2944</th>\n",
+       "      <td>-0.541620</td>\n",
+       "      <td>-0.649368</td>\n",
+       "      <td>2.106800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.353811</td>\n",
        "      <td>-0.386057</td>\n",
-       "      <td>-0.516500</td>\n",
+       "      <td>2.118107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2422</th>\n",
-       "      <td>-0.550137</td>\n",
-       "      <td>-0.722510</td>\n",
-       "      <td>-0.154666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2449</th>\n",
-       "      <td>1.639266</td>\n",
-       "      <td>1.852083</td>\n",
+       "      <th>2141</th>\n",
+       "      <td>3.246075</td>\n",
+       "      <td>2.729785</td>\n",
        "      <td>-0.527807</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1572</th>\n",
-       "      <td>0.230995</td>\n",
-       "      <td>1.149922</td>\n",
-       "      <td>-0.527807</td>\n",
+       "      <th>1938</th>\n",
+       "      <td>1.310369</td>\n",
+       "      <td>-0.473827</td>\n",
+       "      <td>0.388086</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1953</th>\n",
-       "      <td>-0.495162</td>\n",
-       "      <td>-0.590854</td>\n",
-       "      <td>-0.426042</td>\n",
+       "      <th>1150</th>\n",
+       "      <td>-0.146195</td>\n",
+       "      <td>-0.269030</td>\n",
+       "      <td>-0.527807</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-18T21:34:33.784811Z",
-     "start_time": "2025-09-18T21:34:33.782082Z"
+     "end_time": "2025-09-19T10:16:19.077275Z",
+     "start_time": "2025-09-19T10:16:19.073772Z"
     }
    },
    "source": [
@@ -178,7 +178,7 @@
     "X = df.copy()"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 17
   },
   {
    "attachments": {},
@@ -190,8 +190,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-18T21:34:58.625322Z",
-     "start_time": "2025-09-18T21:34:33.786633Z"
+     "end_time": "2025-09-19T10:16:44.395426Z",
+     "start_time": "2025-09-19T10:16:19.078725Z"
     }
    },
    "source": [
@@ -213,14 +213,14 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 18
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-18T21:34:58.860304Z",
-     "start_time": "2025-09-18T21:34:58.627878Z"
+     "end_time": "2025-09-19T10:16:44.630585Z",
+     "start_time": "2025-09-19T10:16:44.397365Z"
     }
    },
    "source": [
@@ -229,14 +229,14 @@
     "y_hc=hc.fit_predict(X)"
    ],
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-18T21:34:58.870903Z",
-     "start_time": "2025-09-18T21:34:58.861691Z"
+     "end_time": "2025-09-19T10:16:44.641300Z",
+     "start_time": "2025-09-19T10:16:44.632144Z"
     }
    },
    "source": [
@@ -362,19 +362,19 @@
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 20
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-18T21:34:58.877263Z",
-     "start_time": "2025-09-18T21:34:58.872288Z"
+     "end_time": "2025-09-19T10:16:44.647510Z",
+     "start_time": "2025-09-19T10:16:44.642680Z"
     }
    },
    "source": [
@@ -391,19 +391,19 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 21
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-18T21:35:02.253491Z",
-     "start_time": "2025-09-18T21:34:58.878608Z"
+     "end_time": "2025-09-19T10:16:48.152684Z",
+     "start_time": "2025-09-19T10:16:44.650787Z"
     }
    },
    "source": [
@@ -415,10 +415,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1260f9df0>"
+       "<seaborn.axisgrid.PairGrid at 0x128bcac70>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -433,7 +433,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 12
+   "execution_count": 22
   },
   {
    "attachments": {},
